style.css
@import url("https://fonts.googleapis.com/css2?&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap&family=Roboto+Slab:wght@400;600;700;800&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  font-size: 62.5%;
  --font-primary: "Roboto Slab", serif;
  --font-secundary: "Philosopher", serif;
  --font-action: "Ubuntu", serif;
}

body {
  background-color: rgb(253, 251, 251);
  font: 400 2rem/1 var(--font-primary);
  color: rgb(20, 15, 20);
}

#cabecalho {
  position: fixed;
  top: 0px;
  width: 100%;
  background-color: #094c93;

  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
}

#titulo {
  font-weight: 800;
}

#titulo::after,
#titulo::before {
  content: "";
  display: block;
  height: 3px;
  width: 40rem;
  margin: 1rem auto;
  background-color: currentColor;
  border-radius: 2px;
}

#cabecalho a {
  display: inline-block;
  text-decoration: none;
  color: #1c96ba;
  padding: 1rem;
  margin-bottom: 1rem;
  border-radius: 1rem;
  transition: 0.8s;
  cursor: pointer;
}

#cabecalho a:hover {
  color: rgb(253, 251, 251);
  background-color: #1c96ba;
}

main::before {
  content: "";
  display: block;
  height: 136px;
}

.foto {
  margin: 1rem auto 0;
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: space-between;
}

.img-wrapper {
  width: 200px;
  height: 200px;
}

.img-wrapper img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: top;
  border-radius: 5rem;
}

.foto a {
  margin-top: 1rem;
  text-decoration: none;
  color: #1c96ba;
}

.foto a:hover,
.foto a:focus {
  color: #094c93;
}

.lists {
  margin-top: 2rem;
  display: flex;
  align-items: center;
  justify-content: space-around;
}

.lessons-learned,
.lessons-to-learn {
  margin-top: 2rem;
}

.lists ul,
.lists ol {
  display: flex;
  flex-direction: column;
}

.lists ul {
  list-style-type: square;
}

.lists li {
  margin: 1rem auto;
}

.main-content {
  margin-top: 3rem;
  display: flex;
  justify-content: space-between;
}

.lado-esquerdo,
.lado-direito {
  padding: 1rem 2rem;
}

.lado-esquerdo {
  border-right: 1px solid currentColor;
}

#about p,
aside em {
  display: block;
  text-align: justify;
}

#about section,
aside section {
  margin: 0.8rem 0;
}

#table {
  margin-top: 2rem;
  background-color: #fefde9;
}

#table h2 {
  text-align: center;
}

.table-content {
  margin-top: 2rem;
  display: flex;
  justify-content: space-around;
}

.table-content img {
  width: 25vw;
}

table {
  color: white;
  text-align: center;
  vertical-align: middle;
  empty-cells: hide;
}

table th {
  height: 30px;
  width: 130px;
  text-decoration: none;
  font-size: 1.3rem;
  text-transform: uppercase;
  border-left: 4px solid #fefde9;
  border-bottom: 5px solid #fefde9;
}

table td {
  height: 60px;
  border-left: 4px solid #fefde9;
  border-bottom: 2px solid #fefde9;
  border-radius: 2rem;
}

.purple {
  background-color: #524972;
}
.blue-purple {
  background-color: #435772;
}
.green-blue {
  background-color: #268b8f;
}
.yellow {
  background-color: #e59a34;
}
.orange {
  background-color: #de5439;
}
.red-pink {
  background-color: #a61639;
}

footer {
  margin-top: 4rem;
  padding: 2rem 0.5rem 0.8rem;
  background-color: #094c93;
}

footer p {
  font-size: 1.2rem;
  font-weight: 600;
  text-align: right;
  vertical-align: bottom;
}

.test-pass-content {
    display: flex;
    justify-content: space-between;
}

